--- a/ui-main/ui-js/app/index.html
+++ b/ui-main/ui-js/app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="uiJsApp">
+  <body ng-app="9toppiksApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -78,6 +78,11 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/user.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/filters/login.js"></script>
+        <script src="scripts/services/login.js"></script>
+        <script src="scripts/directives/login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
